--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -20,46 +20,29 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>
-                                        <span class="extension-name">AAM Multisite Support</span>
-                                    </td>
-                                    <td class="extension-description">
-                                        Extends the AAM functionality to Multisite support and allow
-                                        to control all your multi blogs within one Admin Page. <b>Please notice!</b> 
-                                        Extension is currently under development. Follow us on 
-                                        <a href="https://twitter.com/wpaam" target="_blank">Twitter</a> to know the
-                                        latest updates.
-                                    </td>
-                                    <td class="extension-price free">Free</td>
-                                    <td>
-                                        <div class="extension-actions">
-                                            <a href="http://wpaam.com/support#viewtopic.php?f=7&t=9" target="_blank" class="extension-action extension-action-forum" tooltip="Visit Our Forum"></a>
-                                            <a href="#" class="extension-action extension-action-download development" disabled="disabled" tooltip="Install It Now"></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <span class="extension-name">AAM Plus Package</span>
-                                    </td>
-                                    <td class="extension-description">
-                                        Current Extension extends default AAM basic features and unlock some limitations. 
-                                        Add custom taxonomy <b>Page Category</b> to ground pages into categories;
-                                        Unlock the limitation for Post Access control;
-                                        Add additional Capability Group <b>Comments</b> with the set of capabilities to control default comment 
-                                        actions like <b>Reply</b>, <b>Mark Spam</b>, <b>Trash</b>, <b>Delete</b> etc;
-                                        Add possibility to setup default post or page access.
-                                        For more details, please visit our forum.
-                                    </td>
-                                    <td class="extension-price payed">$30.00</td>
-                                    <td>
-                                        <div class="extension-actions">
-                                            <a href="http://wpaam.com/support#viewtopic.php?f=7&t=10" target="_blank" class="extension-action extension-action-forum" tooltip="Visit Our Forum"></a>
-                                            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase" tooltip="Buy it Today" target="_blank"></a>
-                                        </div>
-                                    </td>
-                                </tr>
+                                <?php if (!defined('AAM_PLUS_PACKAGE_EXTENSION')) { ?>
+                                    <tr>
+                                        <td>
+                                            <span class="extension-name">AAM Plus Package</span>
+                                        </td>
+                                        <td class="extension-description">
+                                            This Extension extends default AAM basic features and unlock some limitations. 
+                                            Add custom taxonomy <b>Page Category</b> to ground pages into categories;
+                                            Unlock the limitation for Post Access control;
+                                            Add additional Capability Group <b>Comments</b> with the set of capabilities to control default comment 
+                                            actions like <b>Reply</b>, <b>Mark Spam</b>, <b>Trash</b>, <b>Delete</b> etc;
+                                            Add possibility to setup default post or page access.
+                                            For more details, please visit our forum.
+                                        </td>
+                                        <td class="extension-price payed">$30.00</td>
+                                        <td>
+                                            <div class="extension-actions">
+                                                <a href="http://wpaam.com/support#viewtopic.php?f=7&t=10" target="_blank" class="extension-action extension-action-forum" tooltip="Visit Our Forum"></a>
+                                                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase" tooltip="Buy it Today" target="_blank"></a>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                <?php } ?>
                             </tbody>
                         </table>
                         <div id="under_dev" class="aam-dialog" title="<?php echo __('Extension Status', 'aam'); ?>">
